bindings: Fix gtk_binding_entry_skip

This fixes a regression from commit 9a3466832cc73ae29b704547747b8699132c1250.

https://bugzilla.gnome.org/show_bug.cgi?id=695380